<resources>
    <string name="app_name">Orecha</string>
    <string name="title_activity_login">Orecha</string>
    <string name="login_email">Email</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="hint_register">Chưa có tài khoản ?</string>

    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="register_button">Đăng Kí</string>
    <string name="hint_login" translatable="false">Đã có tài khoản</string>
    <string name="loading">Đợi một chút nhé!</string>
    <string name="logout">Đăng xuất</string>
    <string name="input_message_hint">Tin nhắn</string>
    <string name="send">Gửi</string>
    <string name="placeholder_message">Placeholder message</string>
    <string name="placeholder_name">DaDra</string>
    <string name="update_profile">Đổi thông tin</string>
    <string name="todo">TODO</string>
    <string name="accept">Đồng ý</string>
    <string name="decline">Hủy bỏ</string>
    <string name="change">Thay đổi</string>
    <string name="email">Email</string>
    <string name="phone">Điện thoại</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="delete_friend">Xóa bạn</string>
    <string name="show_profile">Xem trang cá nhân</string>
    <string name="delete_message">Xóa tin nhắn</string>
    <string name="search">Tìm kiếm</string>
    <string name="contact">Liên hệ</string>
    <string name="chat">Chat</string>
    <string name="group">Nhóm</string>
    <string name="preview">Xem trước</string>
    <string name="delete">Xóa</string>
    <string name="view_avatar">Xem ảnh đại diện</string>
    <string name="change_avatar">Thay đổi ảnh đại diện</string>
    <string name="friend_request">Lời mời kết bạn</string>
    <string name="make_friend">Kết bạn</string>
    <string name="profile">Trang cá nhân</string>
    <string name="image_tag">[Hình ảnh]</string>
    <string name="file_tag">[File]</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_retype_password">Nhập lại mật khẩu mới</string>
    <string name="create_group">Tạo nhóm</string>
    <string name="download">Tải về</string>
    <string name="not_beautiful">Chưa đẹp</string>
    <string name="beautiful">Đẹp rồi</string>
    <string name="refresh">Làm mới</string>
    <string name="verified_email">Email đã được xác thực</string>
    <string name="unverified_email">Email chưa được xác thực</string>
    <string name="send_now">Gửi ngay</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="recover">Khôi phục</string>
    <string name="recover_password_hint">Kiểm tra email để đặt lại mật khẩu</string>
    <string name="recover_password">Khôi phục mật khẩu</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="add_file">Thêm file</string>
    <string name="file_size">%1$d KB</string>
    <string name="delete_room">Xóa phòng chat</string>
</resources>
