<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_group"
        android:icon="@drawable/add"
        android:title="@string/create_group"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/add_friend"
        android:id="@+id/find_friend_option"
        android:icon="@drawable/person_add"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:title="@string/change_password"
        android:id="@+id/change_password_option"
        app:showAsAction="never">
    </item>

    <item
        android:title="@string/logout"
        android:id="@+id/logout_option"
        app:showAsAction="never">
    </item>

</menu>