<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/gray200">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/orange"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:autofillHints=""
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/person_icon"
            app:endIconMode="clear_text"
            style="@style/FillRoundEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="64"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:autofillHints=""
            android:hint="@string/login_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock_icon"
            style="@style/FillRoundEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:hint="@string/retype_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock_icon"
            style="@style/FillRoundEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/register_button"
            style="@style/BigButton"/>

        <TextView
            android:id="@+id/register_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/hint_login"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>