<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/friend_request_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/avatar_circle"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/friend_request_vertical"/>

    <LinearLayout
        android:id="@+id/friend_request_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/friend_request_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/friend_request_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">

            <Button
                android:id="@+id/friend_request_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/decline"
                android:textSize="12sp"
                android:textColor="@color/black"
                style="@style/DeclineButton"/>

            <Button
                android:id="@+id/friend_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textSize="12sp"
                style="@style/AcceptButton"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>