<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/gray200">

    <LinearLayout
        android:id="@+id/login_top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_mid_layout"
        app:layout_constraintVertical_weight="3">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/orange"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_mid_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/login_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_top_layout"
        app:layout_constraintVertical_weight="5">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            style="@style/FillRoundEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:autofillHints=""
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/person_icon"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/login_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock_icon"
            style="@style/FillRoundEditText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            style="@style/BigButton"/>

        <Button
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_mid_layout"
        app:layout_constraintVertical_weight="2">

        <TextView
            android:id="@+id/login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_register"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>