<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray200"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgot_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forgot_password_toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/recover_password"
            android:textColor="@android:color/white" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_password_email"
            style="@style/FillRoundEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:autofillHints=""
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/person_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/recover"
            style="@style/BigButton"/>

        <TextView
            android:id="@+id/forgot_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/recover_password_hint"
            android:textColor="@color/red"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>